--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,22 @@
+# Configurações do DataSource
+spring.datasource.url=jdbc:postgresql://localhost:5432/formulariobd
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configurações do JPA e Hibernate
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Configurações de Upload de Arquivo
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
+
+# Configurações de Logging
+logging.level.org.springframework=DEBUG
+
+# Configurações de Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=emaildevteste60@gmail.com
