--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ logging.level.org.springframework=DEBUG
 # Configurações de Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=emaildevteste60@gmail.com
-spring.mail.password=cnng bvrw wbdu vkev
+spring.mail.username=teste@teste.com
+#spring.mail.password=cnng bvrw wbdu vkev
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
