--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configurações do JPA e Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -19,6 +19,7 @@ logging.level.org.springframework=DEBUG
 # Configurações de Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+# pode ser usado o email: emaildevteste60@gmail.com é descomentar a senha.
 spring.mail.username=teste@teste.com
 #spring.mail.password=cnng bvrw wbdu vkev
 spring.mail.properties.mail.smtp.auth=true
