--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,13 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configurações do JPA e Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+api.security.admin.username=admin
+api.security.admin.password=admin
+
 
 # Configurações de Upload de Arquivo
 spring.servlet.multipart.max-file-size=1MB
@@ -19,8 +23,15 @@ logging.level.org.springframework=DEBUG
 # Configurações de Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-# pode ser usado o email: emaildevteste60@gmail.com é descomentar a senha.
+#spring.mail.username=emaildevteste60@gmail.com
 spring.mail.username=teste@teste.com
 #spring.mail.password=cnng bvrw wbdu vkev
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Configuração do Token JWT
+api.security.token.secret=your-secret-key
+
+app.upload-dir=Projeto-UGTSIC-Back/uploads
+
+
